# android-llm-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.en.md  README.md  pyproject.toml
.claude/agents/: README.md  architecture-reviewer.md  code-reviewer.md  mockup-baseline-checker.md  performance-auditor.md  security-and-neutrality-auditor.md  ui-fluency-auditor.md  visual-audit-runner.md
.claude/commands/: arch.md  perf.md  preflight.md  review.md  security.md  ui-check.md
.claude/knowledge/: README.md  architecture.md  debts.md  decisions.md  lessons.md  review-feedback.md
.claude/reports/: README.md  agent-grep-sweep-2026-05-02.md  functional-audit-2026-05-02.md  perf-audit-debt022-2026-05-02.md  preflight-2026-04-29-f-dock.md  visual-2026-04-29-debt001.md  visual-2026-04-29-f7.md  visual-2026-04-30-debt017.md
docs/: 00-overview.md  404.html  agent.md  architecture.md  contributing.md  design-decisions.md  dev-team.html  errors.md  index.html  install.md  llm-integration.md  on-device-agent.html  on-device-model-selection.html  on-device-model-selection.md  permissions.md  project-plan.md  setup-remote-android-debug.md  tool-writing-guide.md  web-api.md  webui-preview-v2.html  webui-preview.html
docs/app/: index.html
docs/app/assets/: ChartsTab-BgSuUaPm.js  ChartsTab-CAjkGxyj.js  ChartsTab-DqDkMNP1.js  ChartsTab-HaaRobi4.js  ChartsTab-meIcg2t5.js  ChartsTab-ynfPx10J.js  FilesTab-75_B70Sb.js  FilesTab-B0WZhRdx.js  FilesTab-CALSLChx.js  FilesTab-CUSdvuPc.js  FilesTab-CxNXjIPq.js  FilesTab-DRhSRsPy.js  HitlConfirmModal-B_tGzk_G.js  HitlConfirmModal-Cz9o2mXX.js  HitlConfirmModal-DbergsQU.js  HitlConfirmModal-DtSDFIS7.js  LogcatTab-B7jPkh8r.js  LogcatTab-Bw2yAeKx.js  LogcatTab-CeKKwgyc.js  LogcatTab-CuWbKw3r.js  LogcatTab-CyOnj7os.js  LogcatTab-D3mwB6tk.js  ScreenshotTab-BWaNA5CB.js  ScreenshotTab-BYft165I.js  ScreenshotTab-BqPGc0YT.js  ScreenshotTab-CgSHtnfi.js  ScreenshotTab-DvqCpBHB.js  ScreenshotTab-JVdiJ8AJ.js  ShellTab-Bh66y3Vz.js  ShellTab-BtkuSaZL.js  ShellTab-D4P_VtwV.js  ShellTab-D5JeEsIE.js  ShellTab-DB_9q2jN.js  ShellTab-DpqJQk5K.js  SystemInfoTab-C0xsEMEB.js  SystemInfoTab-CGHlTlMR.js  SystemInfoTab-CZZ-MnTl.js  SystemInfoTab-C_4PDa-G.js  SystemInfoTab-DODoWKmF.js  SystemInfoTab-DX6XukUR.js  (+71 more)
docs/capabilities/: 00-overview.md  app.md  diagnose.md  filesync.md  logging.md  power.md  shell.md
docs/methods/: 00-comparison.md  01-ssh-tunnel-adb.md  02-adb-wifi.md  03-android-sshd.md  04-usb-network.md  05-scrcpy.md  06-frp-cloud.md  07-uart-serial.md
llm/: AGENTS.md  CLAUDE.md
llm/commands/: README.md
llm/mcp-config-examples/: README.md  claude-code.json  codex.json  cursor.json
scripts/: check_offline_purity.sh  check_sensitive_words.sh  f8_screenshots.mjs  install.sh  smoke_agent_ollama.py  uninstall.sh  windows_serial_bridge.py
src/alb/: __init__.py
src/alb/agent/: __init__.py  backend.py  loop.py  playground.py  session.py
src/alb/api/: __init__.py  audit_route.py  chat_route.py  devices_route.py  files_route.py  logcat_stream_route.py  meta_route.py  metrics_route.py  metrics_summary_route.py  playground_route.py  schema.py  server.py  sessions_route.py  terminal_route.py  tools_route.py  uart_route.py  uart_stream_route.py  ui_static.py
src/alb/capabilities/: __init__.py  app.py  diagnose.py  filesync.py  info.py  logging.py  metrics.py  power.py  shell.py  ui.py
src/alb/cli/: __init__.py  app_cli.py  chat_cli.py  common.py  (+11 more)
tests/: __init__.py  conftest.py  test_smoke.py
tests/agent/: test_anthropic.py  test_backend_registry.py  test_loop.py  test_ollama.py  test_openai_compat.py  test_playground.py  test_session.py
tests/api/: test_audit_route.py  test_chat_route.py  test_devices_route.py  test_files_route.py  test_logcat_stream_route.py  test_meta_route.py  test_metrics_route.py  test_metrics_summary_route.py  test_playground_route.py  test_sessions_route.py  test_terminal_route.py  test_tools_route.py  test_uart_route.py  test_uart_stream_route.py  test_ui_static.py
tests/capabilities/: test_app.py  test_diagnose.py  test_filesync.py  test_filesync_rsync.py  test_info.py  test_logging.py  test_logging_uart.py  test_metrics.py  test_power.py  test_shell.py  test_ui.py
tests/cli/: test_chat_cli.py  test_main_smoke.py
tests/infra/: test_config.py  test_env_loader.py  test_event_bus.py  test_events.py  test_process.py  test_prompt_builder.py  test_token_sampler.py
tests/mcp/: test_server.py
tests/skills/: test_generator.py
tests/transport/: test_adb.py  test_hybrid.py  test_interactive.py  test_serial.py  test_serial_learn.py  test_serial_probe.py  test_serial_state.py  test_ssh.py  test_terminal_guard.py
tests/web/: spa_fallback_test.mjs
web/: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/: fonts.css
web/scripts/: inspect_e2e.mjs  vendor-fonts.py  web_check.mjs
web/src/: App.tsx  main.tsx  router.tsx
(+110 files in other folders)
